--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@ small{color:#666}
 <h2>Convertisseur images → N-bit (hex)</h2>
 
 <div>
-<script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="miw4n" data-color="#FFDD00" data-emoji=""  data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
-
+<script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="miw4n" data-color="#FFDD00" data-emoji="🧋"  data-font="Cookie" data-text="Buy me a bubble tea" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
 <label for="file">Choisir des images :</label>
 
 <input id="file" type="file" accept="image/*" multiple>
@@ -406,3 +405,4 @@ function processImage(img, outCanvas){
 </body>
 
 </html>
+
